# polysplit

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: main.yml
src/: cut_ratio_result.rs  distance_to_segment_result.rs  euclidean.rs  interface.rs  lib.rs  polylib_error.rs  polymerge.rs  polysplit.rs  result.rs
