# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "polysplit"
version = "0.1.0"
edition = "2021"
authors = ["Vitaly Chezganov"]
description = "Algorithm that allows to split polylines into segments defined by the list of points not necessary belonging to the polyline"


[profile.release]
lto = true


[dependencies]
itertools = "*"